# move-sentiment-analysis

./: .gitignore  README.md  compose.yaml  pyproject.toml
backend/: Dockerfile  README.md  pyproject.toml
backend/src/: app.py  ml.py
src/: ml.py
web/: package-lock.json  package.json
web/app/: layout.tsx  page.tsx
web/components/: themeProvider.tsx
