[tool.poetry]
name = "movie-sentiment-analysis"
version = "0.1.0"
description = "\"A sentinment analysis tool for movie reviews\""
authors = ["Richard Paredes <richard.o.paredes@gmail.com>"]
readme = "README.md"
packages = [{include="poetry_demo"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
