[tool.poetry]
name = "movie-sentiment-analysis"
version = "0.1.0"
description = "\"A sentinment analysis tool for movie reviews\""
authors = ["Richard Paredes <richard.o.paredes@gmail.com>"]
readme = "README.md"
packages = [{include="src"}]

[tool.poetry.dependencies]
python = "^3.10"
nltk = "^3.9.1"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
joblib = "^1.4.2"
click = "^8.1.7"
fastapi = {extras = ["standard"], version = "^0.112.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
